--- a/Activators.html
+++ b/Activators.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collection Files । Premium Apk</title>
+    <title>Collection Files । Activators</title>
+    <link rel="shortcup icon" type="image/ico" href="img/favicon/S-favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="shortcup icon" type="image/ico" href="img/favicon/app-favicon.png">
+
+
+
+    <!-------Custom css code------->
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/mobileApp.css">
+    <link rel="stylesheet" href="css/softwarepage.css">
 
 </head>
 
@@ -89,8 +93,8 @@
             </li>
         </ul>
     </nav>
-
     <!------Nav End------>
+    <!----body----->
 
 
 
@@ -98,91 +102,108 @@
 
 
 
-    <!---- Search Box ---->
-    <div class="search-container">
-        <input type="text" class="search-box" placeholder="Enter Search type..." id="searchInput">
-        <button class="search-button" onclick="searchCards()">Search</button>
-    </div>
-    <div class="error-message" id="errorMessage">কোন ফলাফল পাওয়া যায়নি।</div>
-
-    <div class="card-container" id="cardContainer">
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
+    <div class="soft-card-container">
+        <div class="soft-card">
+            <img src="https://via.placeholder.com/300" alt="Image 1">
             <div class="card-content">
-                <h3>নাম ১</h3>
-                <p>পারা ১</p>
+                <h2>Card Title 1</h2>
+                <p>This is a sample paragraph for the card content.</p>
+                <p>Password: 152451</p>
+                <div class="star-icons">★★★★☆</div>
+                <button class="read-more" onclick="toggleIcons(this)">Read More</button>
+                <div class="icon-buttons">
+                    <button class="download">
+                        <a href="https://example.com/download" target="_blank">
+                            <i class="fas fa-download"></i></a>
+                    </button>
+                    <button class="google-drive">
+                        <a href="https://drive.google.com/" target="_blank">
+                            <i class="fab fa-google-drive"></i></a>
+                    </button>
+                    <button class="terabox">
+                        <a href="https://www.terabox.com/" target="_blank">
+                            <i class="fas fa-box"></i></a>
+                    </button>
+                </div>
             </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
         </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
+        <div class="soft-card">
+            <img src="https://via.placeholder.com/300" alt="Image 1">
             <div class="card-content">
-                <h3>নাম ২</h3>
-                <p>পারা ২</p>
+                <h2>Card Title 1</h2>
+                <p>This is a sample paragraph for the card content.</p>
+                <p>Password: 152451</p>
+                <div class="star-icons">★★★★☆</div>
+                <button class="read-more" onclick="toggleIcons(this)">Read More</button>
+                <div class="icon-buttons">
+                    <button class="download">
+                        <a href="https://example.com/download" target="_blank">
+                            <i class="fas fa-download"></i></a>
+                    </button>
+                    <button class="google-drive">
+                        <a href="https://drive.google.com/" target="_blank">
+                            <i class="fab fa-google-drive"></i></a>
+                    </button>
+                    <button class="terabox">
+                        <a href="https://www.terabox.com/" target="_blank">
+                            <i class="fas fa-box"></i></a>
+                    </button>
+                </div>
             </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ৩</h3>
-                <p>পারা ৩</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-    </div>
-    <div class="card-container" id="cardContainer">
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ১</h3>
-                <p>পারা ১</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ২</h3>
-                <p>পারা ২</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ৩</h3>
-                <p>পারা ৩</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
         </div>
     </div>
-    <div class="card-container" id="cardContainer">
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
+    <div class="soft-card-container">
+        <div class="soft-card">
+            <img src="https://via.placeholder.com/300" alt="Image 1">
             <div class="card-content">
-                <h3>নাম ১</h3>
-                <p>পারা ১</p>
+                <h2>Card Title 1</h2>
+                <p>This is a sample paragraph for the card content.</p>
+                <p>Password: 152451</p>
+                <div class="star-icons">★★★★☆</div>
+                <button class="read-more" onclick="toggleIcons(this)">Read More</button>
+                <div class="icon-buttons">
+                    <button class="download">
+                        <a href="https://example.com/download" target="_blank">
+                            <i class="fas fa-download"></i></a>
+                    </button>
+                    <button class="google-drive">
+                        <a href="https://drive.google.com/" target="_blank">
+                            <i class="fab fa-google-drive"></i></a>
+                    </button>
+                    <button class="terabox">
+                        <a href="https://www.terabox.com/" target="_blank">
+                            <i class="fas fa-box"></i></a>
+                    </button>
+                </div>
             </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
         </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
+        <div class="soft-card">
+            <img src="https://via.placeholder.com/300" alt="Image 1">
             <div class="card-content">
-                <h3>নাম ২</h3>
-                <p>পারা ২</p>
+                <h2>Card Title 1</h2>
+                <p>This is a sample paragraph for the card content.</p>
+                <p>Password: 152451</p>
+                <div class="star-icons">★★★★☆</div>
+                <button class="read-more" onclick="toggleIcons(this)">Read More</button>
+                <div class="icon-buttons">
+                    <button class="download">
+                        <a href="https://example.com/download" target="_blank">
+                            <i class="fas fa-download"></i></a>
+                    </button>
+                    <button class="google-drive">
+                        <a href="https://drive.google.com/" target="_blank">
+                            <i class="fab fa-google-drive"></i></a>
+                    </button>
+                    <button class="terabox">
+                        <a href="https://www.terabox.com/" target="_blank">
+                            <i class="fas fa-box"></i></a>
+                    </button>
+                </div>
             </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>P ৩</h3>
-                <p>P ৩</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
         </div>
     </div>
+
+
 
 
 
@@ -315,9 +336,10 @@
         </div>
     </footer>
 
+
     <!------ Java Script---------->
-    <script src="js/nav.js"></script>
-    <script src="js/mobileApp.js"></script>
+    <script src="js/nav.js">   </script>
+    <script src="js/softwarepage.js">    </script>
 </body>
 
 </html>
