--- a/earningapk.html
+++ b/earningapk.html
@@ -27,12 +27,20 @@
             <li>
                 <a href="#Software">Software</a>
                 <div class="dropdown">
-                    <a href="software.html">All Software</a>
+                    <a href="#subcontact4" onclick="toggleNestedMenu(event)">Application software</a>
+                    <div class="nested-dropdown" id="nestedMenu4">
+                        <a href="photoshop.html">Photoshop</a>
+                        <a href="brfont.html">Illustrator</a>
+                        <a href="bsyfont.html">Camtasia Software</a>
+                        <a href="software.html">Microsoft Office</a>
+                    </div>
                     <a href="themes.html">Desktop Themes</a>
+                    <a href="antivirus.html">Antivirus</a>
+                    <a href="Activators.html">All Activators</a>
                 </div>
             </li>
             <li>
-                <a href="#about">Mobile App</a>
+                <a href="#app">Mobile App</a>
                 <div class="dropdown">
                     <a href="premiumapk.html">Premium Apk</a>
                     <a href="earningapk.html">Earning Apk</a>
@@ -53,30 +61,31 @@
                         <a href="Erfont.html">English Raguler Font</a>
                         <a href="Esyfont.html">English Symble Font</a>
                     </div>
-                    <a href="#subcontact3" onclick="toggleNestedMenu(event)">Arabic Fonts</a>
+                    <a href="#subcontact3" onclick="toggleNestedMenu(event)">Aribic Fonts</a>
                     <div class="nested-dropdown" id="nestedMenu3">
-                        <a href="arfont.html">Arabic Raguler Font</a>
+                        <a href="arfont.html">Aribic Raguler Font</a>
                         <a href="#">------</a>
                         <a href="#">------</a>
                     </div>
+
                 </div>
             </li>
             <li>
-                <a href="#blog">Movie</a>
+                <a href="#movie">Movie</a>
                 <div class="dropdown">
-                    <a href="#">সাব-লিঙ্ক 1</a>
-                    <a href="#">সাব-লিঙ্ক 2</a>
+                    <a href="movie-1.html">Movie-1</a>
+                    <a href="movie-2.html">Movie-2</a>
                 </div>
             </li>
             <li>
-                <a href="#portfolio">Ai Tools</a>
+                <a href="#tools">Ai Tools</a>
                 <div class="dropdown">
-                    <a href="#">সাব-লিঙ্ক 1</a>
-                    <a href="#">সাব-লিঙ্ক 2</a>
+                    <a href="tools-1.html">tools-1</a>
+                    <a href="tools-2.html">tools-2</a>
                 </div>
             </li>
             <li>
-                <a href="Contect.html">Contact</a>
+                <a href="Contect.html">Contect</a>
             </li>
         </ul>
     </nav>
@@ -134,6 +143,85 @@
 
 
 
+    <div class="diagram-container">
+        <h1>Collection Files</h1>
+
+        <div class="controls">
+            <button id="toggleExpand">Expand All</button>
+        </div>
+
+        <div class="diagram">
+            <div class="box">
+                <a href="#">Icon <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="icon.html">1. Icon list</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Software <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="software.html">1. Application Software</a></li>
+                    <li><a href="photoshop.html">1. Photoshop</a></li>
+                    <li><a href="illustrator.html">2. illustrator</a></li>
+                    <li><a href="Camtasia.html">3. Camtasia Software</a></li>
+                    <li><a href="Microsoft-office.html">4. Microsoft Office</a></li>
+                    <li><a href="themes.html">2. Desktop Themes</a></li>
+                    <li><a href="antivirus.html">3. Antivirus</a></li>
+                    <li><a href="Activators.html">4. All Activators</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Mobile App <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="premiumapk.html">1. Premium Apk</a></li>
+                    <li><a href="earningapk.html">2. Earning Apk</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Font <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li>
+                        <a href="#">1. Bangla Font </a>
+                        <ul class="sub-items">
+                            <li><a href="bsfont.html">1. Bangla Style Font</a></li>
+                            <li><a href="brfont.html">2. Bangla Regular Font</a></li>
+                            <li><a href="bsyfont.html">3. Bangla Symbol Font</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">2. English Font </a>
+                        <ul class="sub-items">
+                            <li><a href="Esfont.html">1. English Style Font</a></li>
+                            <li><a href="Erfont.html">2. English Regular Font</a></li>
+                            <li><a href="Esyfont.html">3. English Symbol Font</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">3. Arabic Font</a>
+                        <ul class="sub-items">
+                            <li><a href="arfont.html">1. Arabic Regular Font</a></li>
+                            <li><a href="#">2. ----------</a></li>
+                            <li><a href="#">3. ----------</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Movie <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="movie-1.html">1. movie-1</a></li>
+                    <li><a href="movie-2.html">2. movie-2</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">AI Tools <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="tools-1.html">1. Tools-1</a></li>
+                    <li><a href="tools-2.html">2. Tools-2</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- Green Footer Section -->
     <footer>
         <div class="footer-content">
@@ -144,9 +232,7 @@
             <div class="footer-column">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms of Service</a></li>
                     <li><a href="#">FAQ</a></li>
@@ -154,15 +240,7 @@
                     <li><a href="#">Support</a></li>
                 </ul>
             </div>
-            <div class="footer-column">
-                <h2>Quick Links 2</h2>
-                <ul>
-                    <li><a href="#">Link A</a></li>
-                    <li><a href="#">Link B</a></li>
-                    <li><a href="#">Link C</a></li>
-                    <li><a href="#">Link D</a></li>
-                </ul>
-            </div>
+
             <div class="footer-column">
                 <h2>Subscribe</h2>
                 <div class="subscribe">
@@ -179,7 +257,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2024 Your Company. All Rights Reserved.</p>
+            <p>Copyright © Md Shozol Hossain. All rights reserved-2024</p>
         </div>
     </footer>
 
