--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                     <a href="#subcontact4" onclick="toggleNestedMenu(event)">Application software</a>
                     <div class="nested-dropdown" id="nestedMenu4">
                         <a href="photoshop.html">Photoshop</a>
-                        <a href="brfont.html">illustrator</a>
+                        <a href="brfont.html">Illustrator</a>
                         <a href="bsyfont.html">Camtasia Software</a>
                         <a href="software.html">Microsoft Office</a>
                     </div>
                     <a href="themes.html">Desktop Themes</a>
-                    <a href="themes.html">Desktop Anti</a>
-                    <a href="themes.html">All Activators</a>
+                    <a href="antivirus.html">Antivirus</a>
+                    <a href="Activators.html">All Activators</a>
                 </div>
             </li>
             <li>
-                <a href="#about">Mobile App</a>
+                <a href="#app">Mobile App</a>
                 <div class="dropdown">
                     <a href="premiumapk.html">Premium Apk</a>
                     <a href="earningapk.html">Earning Apk</a>
@@ -75,17 +75,17 @@
                 </div>
             </li>
             <li>
-                <a href="#blog">Movie</a>
+                <a href="#movie">Movie</a>
                 <div class="dropdown">
-                    <a href="#">সাব-লিঙ্ক 1</a>
-                    <a href="#">সাব-লিঙ্ক 2</a>
+                    <a href="movie-1.html">Movie-1</a>
+                    <a href="movie-2.html">Movie-2</a>
                 </div>
             </li>
             <li>
-                <a href="#portfolio">Ai Tools</a>
+                <a href="#tools">Ai Tools</a>
                 <div class="dropdown">
-                    <a href="#">সাব-লিঙ্ক 1</a>
-                    <a href="#">সাব-লিঙ্ক 2</a>
+                    <a href="tools-1.html">tools-1</a>
+                    <a href="tools-2.html">tools-2</a>
                 </div>
             </li>
             <li>
@@ -137,13 +137,13 @@
                 <a href="#">Software <span class="arrow"></span></a>
                 <ul class="sub-items">
                     <li><a href="software.html">1. Application Software</a></li>
-                    <li><a href="themes.html">1. Photoshop</a></li>
-                    <li><a href="themes.html">2. illustrator</a></li>
-                    <li><a href="themes.html">3. Camtasia Software</a></li>
-                    <li><a href="themes.html">4. Microsoft Office</a></li>
-                    <li><a href="themes.html">2. Application Software</a></li>
-                    <li><a href="themes.html">3. Themes</a></li>
-                    <li><a href="themes.html">4. anti</a></li>
+                    <li><a href="photoshop.html">1. Photoshop</a></li>
+                    <li><a href="illustrator.html">2. illustrator</a></li>
+                    <li><a href="Camtasia.html">3. Camtasia Software</a></li>
+                    <li><a href="Microsoft-office.html">4. Microsoft Office</a></li>
+                    <li><a href="themes.html">2. Desktop Themes</a></li>
+                    <li><a href="antivirus.html">3. Antivirus</a></li>
+                    <li><a href="Activators.html">4. All Activators</a></li>
                 </ul>
             </div>
             <div class="box">
@@ -175,9 +175,9 @@
                     <li>
                         <a href="#">3. Arabic Font</a>
                         <ul class="sub-items">
-                            <li><a href="arfont.html">3. Arabic Regular Font</a></li>
-                            <li><a href="#">3. English Style Font</a></li>
-                            <li><a href="#">3. English Symbol Font</a></li>
+                            <li><a href="arfont.html">1. Arabic Regular Font</a></li>
+                            <li><a href="#">2. ----------</a></li>
+                            <li><a href="#">3. ----------</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -185,15 +185,15 @@
             <div class="box">
                 <a href="#">Movie <span class="arrow"></span></a>
                 <ul class="sub-items">
-                    <li><a href="#">1. Link-1</a></li>
-                    <li><a href="#">2. Link-2</a></li>
+                    <li><a href="movie-1.html">1. movie-1</a></li>
+                    <li><a href="movie-2.html">2. movie-2</a></li>
                 </ul>
             </div>
             <div class="box">
                 <a href="#">AI Tools <span class="arrow"></span></a>
                 <ul class="sub-items">
-                    <li><a href="#">1. Link-1</a></li>
-                    <li><a href="#">2. Link-2</a></li>
+                    <li><a href="tools-1.html">1. Tools-1</a></li>
+                    <li><a href="tools-2.html">2. Tools-2</a></li>
                 </ul>
             </div>
         </div>
