--- a/movie-1.html
+++ b/movie-1.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collection Files । Premium Apk</title>
+    <title>Collection Files । Movie-1</title>
+    <link rel="shortcup icon" type="image/ico" href="img/favicon/Mov-favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="shortcup icon" type="image/ico" href="img/favicon/app-favicon.png">
+
+
+
+    <!-------Custom css code------->
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/mobileApp.css">
+
 
 </head>
 
@@ -89,8 +93,8 @@
             </li>
         </ul>
     </nav>
-
     <!------Nav End------>
+    <!----body----->
 
 
 
@@ -98,91 +102,9 @@
 
 
 
-    <!---- Search Box ---->
-    <div class="search-container">
-        <input type="text" class="search-box" placeholder="Enter Search type..." id="searchInput">
-        <button class="search-button" onclick="searchCards()">Search</button>
-    </div>
-    <div class="error-message" id="errorMessage">কোন ফলাফল পাওয়া যায়নি।</div>
 
-    <div class="card-container" id="cardContainer">
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ১</h3>
-                <p>পারা ১</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ২</h3>
-                <p>পারা ২</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ৩</h3>
-                <p>পারা ৩</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-    </div>
-    <div class="card-container" id="cardContainer">
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ১</h3>
-                <p>পারা ১</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ২</h3>
-                <p>পারা ২</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ৩</h3>
-                <p>পারা ৩</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-    </div>
-    <div class="card-container" id="cardContainer">
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ১</h3>
-                <p>পারা ১</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>নাম ২</h3>
-                <p>পারা ২</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-        <div class="card">
-            <img src="https://via.placeholder.com/100x100" alt="Card Image" class="card-image">
-            <div class="card-content">
-                <h3>P ৩</h3>
-                <p>P ৩</p>
-            </div>
-            <a href="#" class="card-button"><span>Download </span> <i class="fas fa-download download-icon"></i></a>
-        </div>
-    </div>
+
+
 
 
 
@@ -315,9 +237,9 @@
         </div>
     </footer>
 
+
     <!------ Java Script---------->
-    <script src="js/nav.js"></script>
-    <script src="js/mobileApp.js"></script>
+    <script src="js/nav.js">   </script>
 </body>
 
 </html>
