--- a/photoshop.html
+++ b/photoshop.html
@@ -10,152 +10,7 @@
     <!-------Custom css code------->
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/softwarepage.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-        }
 
-        .soft-card-container {
-            display: flex;
-            justify-content: space-around;
-            margin: 20px;
-        }
-
-        .soft-card {
-            display: flex;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            width: 49%;
-            margin: 10px;
-            padding: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .soft-card img {
-            width: 300px;
-            height: 300px;
-            border-radius: 8px;
-            margin-right: 20px;
-        }
-
-        .soft-card-content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .soft-card-content h2 {
-            margin-bottom: 15px;
-            font-size: 1.5em;
-        }
-
-        .soft-card-content p {
-            font-size: 1em;
-            margin-bottom: 10px;
-        }
-
-        .star-icons {
-            font-size: 1.2em;
-            color: gold;
-            margin-bottom: 15px;
-        }
-
-        .read-more {
-            padding: 10px 20px;
-            background-color: #28a745;
-            /* Default color */
-            color: white;
-            border: none;
-            width: 120px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .read-more:hover {
-            background-color: #218838;
-        }
-
-        .icon-buttons {
-            display: none;
-            margin-top: 10px;
-            justify-content: left;
-            transition: opacity 0.5s ease, transform 0.5s ease;
-            opacity: 0;
-            transform: translateY(-10px);
-        }
-
-        .icon-buttons.show {
-            display: flex;
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .icon-buttons a {
-            text-decoration: none;
-            color: white;
-        }
-
-        .icon-buttons button {
-            margin-right: 10px;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .icon-buttons .download {
-            background-color: #007bff;
-        }
-
-        .icon-buttons .google-drive {
-            background-color: #bb9603;
-        }
-
-        .icon-buttons .terabox {
-            background-color: #4CAF50;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .soft-card-container {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .soft-card {
-                width: 100%;
-                flex-direction: column;
-                text-align: left;
-                padding: 10px;
-                /* Set padding for cards in mobile view */
-                margin-bottom: 10px;
-                /* Add spacing between cards */
-            }
-
-            .soft-card img {
-                margin-bottom: 20px;
-                width: 100%;
-                height: auto;
-            }
-
-            .soft-card-content {
-                width: 100%;
-            }
-
-            .icon-buttons {
-                flex-direction: row;
-                /* Display buttons in a row */
-            }
-
-            .icon-buttons button {
-                margin-bottom: 0;
-                /* Remove margin at the bottom */
-            }
-        }
-    </style>
 
 </head>
 
@@ -179,18 +34,18 @@
                 <div class="dropdown">
                     <a href="#subcontact4" onclick="toggleNestedMenu(event)">Application software</a>
                     <div class="nested-dropdown" id="nestedMenu4">
-                        <a href="adobephotoshop.html">Photoshop</a>
-                        <a href="brfont.html">illustrator</a>
+                        <a href="photoshop.html">Photoshop</a>
+                        <a href="brfont.html">Illustrator</a>
                         <a href="bsyfont.html">Camtasia Software</a>
                         <a href="software.html">Microsoft Office</a>
                     </div>
                     <a href="themes.html">Desktop Themes</a>
-                    <a href="themes.html">Desktop Anti</a>
-                    <a href="themes.html">All Activators</a>
+                    <a href="antivirus.html">Antivirus</a>
+                    <a href="Activators.html">All Activators</a>
                 </div>
             </li>
             <li>
-                <a href="#about">Mobile App</a>
+                <a href="#app">Mobile App</a>
                 <div class="dropdown">
                     <a href="premiumapk.html">Premium Apk</a>
                     <a href="earningapk.html">Earning Apk</a>
@@ -221,17 +76,17 @@
                 </div>
             </li>
             <li>
-                <a href="#blog">Movie</a>
+                <a href="#movie">Movie</a>
                 <div class="dropdown">
-                    <a href="#">সাব-লিঙ্ক 1</a>
-                    <a href="#">সাব-লিঙ্ক 2</a>
+                    <a href="movie-1.html">Movie-1</a>
+                    <a href="movie-2.html">Movie-2</a>
                 </div>
             </li>
             <li>
-                <a href="#portfolio">Ai Tools</a>
+                <a href="#tools">Ai Tools</a>
                 <div class="dropdown">
-                    <a href="#">সাব-লিঙ্ক 1</a>
-                    <a href="#">সাব-লিঙ্ক 2</a>
+                    <a href="tools-1.html">tools-1</a>
+                    <a href="tools-2.html">tools-2</a>
                 </div>
             </li>
             <li>
@@ -351,85 +206,86 @@
 
 
 
-    <div class="diagram-container"></div>
-    <h1>Collection Files</h1>
+    <div class="diagram-container">
+        <h1>Collection Files</h1>
 
-    <div class="controls">
-        <button id="toggleExpand">Expand All</button>
+        <div class="controls">
+            <button id="toggleExpand">Expand All</button>
+        </div>
+
+        <div class="diagram">
+            <div class="box">
+                <a href="#">Icon <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="icon.html">1. Icon list</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Software <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="software.html">1. Application Software</a></li>
+                    <li><a href="themes.html">1. Photoshop</a></li>
+                    <li><a href="themes.html">2. illustrator</a></li>
+                    <li><a href="themes.html">3. Camtasia Software</a></li>
+                    <li><a href="themes.html">4. Microsoft Office</a></li>
+                    <li><a href="themes.html">2. Application Software</a></li>
+                    <li><a href="themes.html">3. Themes</a></li>
+                    <li><a href="themes.html">4. anti</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Mobile App <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="premiumapk.html">1. Premium Apk</a></li>
+                    <li><a href="earningapk.html">2. Earning Apk</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Font <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li>
+                        <a href="#">1. Bangla Font </a>
+                        <ul class="sub-items">
+                            <li><a href="bsfont.html">1. Bangla Style Font</a></li>
+                            <li><a href="brfont.html">2. Bangla Regular Font</a></li>
+                            <li><a href="bsyfont.html">3. Bangla Symbol Font</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">2. English Font </a>
+                        <ul class="sub-items">
+                            <li><a href="Esfont.html">1. English Style Font</a></li>
+                            <li><a href="Erfont.html">2. English Regular Font</a></li>
+                            <li><a href="Esyfont.html">3. English Symbol Font</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">3. Arabic Font</a>
+                        <ul class="sub-items">
+                            <li><a href="arfont.html">3. Arabic Regular Font</a></li>
+                            <li><a href="#">3. English Style Font</a></li>
+                            <li><a href="#">3. English Symbol Font</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">Movie <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="#">1. Link-1</a></li>
+                    <li><a href="#">2. Link-2</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <a href="#">AI Tools <span class="arrow"></span></a>
+                <ul class="sub-items">
+                    <li><a href="#">1. Link-1</a></li>
+                    <li><a href="#">2. Link-2</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
-    <div class="diagram">
-        <div class="box">
-            <a href="#">Icon <span class="arrow"></span></a>
-            <ul class="sub-items">
-                <li><a href="icon.html">1. Icon list</a></li>
-            </ul>
-        </div>
-        <div class="box">
-            <a href="#">Software <span class="arrow"></span></a>
-            <ul class="sub-items">
-                <li><a href="software.html">1. Application Software</a></li>
-                <li><a href="themes.html">1. Photoshop</a></li>
-                <li><a href="themes.html">2. illustrator</a></li>
-                <li><a href="themes.html">3. Camtasia Software</a></li>
-                <li><a href="themes.html">4. Microsoft Office</a></li>
-                <li><a href="themes.html">2. Application Software</a></li>
-                <li><a href="themes.html">3. Themes</a></li>
-                <li><a href="themes.html">4. anti</a></li>
-            </ul>
-        </div>
-        <div class="box">
-            <a href="#">Mobile App <span class="arrow"></span></a>
-            <ul class="sub-items">
-                <li><a href="premiumapk.html">1. Premium Apk</a></li>
-                <li><a href="earningapk.html">2. Earning Apk</a></li>
-            </ul>
-        </div>
-        <div class="box">
-            <a href="#">Font <span class="arrow"></span></a>
-            <ul class="sub-items">
-                <li>
-                    <a href="#">1. Bangla Font </a>
-                    <ul class="sub-items">
-                        <li><a href="bsfont.html">1. Bangla Style Font</a></li>
-                        <li><a href="brfont.html">2. Bangla Regular Font</a></li>
-                        <li><a href="bsyfont.html">3. Bangla Symbol Font</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">2. English Font </a>
-                    <ul class="sub-items">
-                        <li><a href="Esfont.html">1. English Style Font</a></li>
-                        <li><a href="Erfont.html">2. English Regular Font</a></li>
-                        <li><a href="Esyfont.html">3. English Symbol Font</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">3. Arabic Font</a>
-                    <ul class="sub-items">
-                        <li><a href="arfont.html">3. Arabic Regular Font</a></li>
-                        <li><a href="#">3. English Style Font</a></li>
-                        <li><a href="#">3. English Symbol Font</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="box">
-            <a href="#">Movie <span class="arrow"></span></a>
-            <ul class="sub-items">
-                <li><a href="#">1. Link-1</a></li>
-                <li><a href="#">2. Link-2</a></li>
-            </ul>
-        </div>
-        <div class="box">
-            <a href="#">AI Tools <span class="arrow"></span></a>
-            <ul class="sub-items">
-                <li><a href="#">1. Link-1</a></li>
-                <li><a href="#">2. Link-2</a></li>
-            </ul>
-        </div>
-    </div>
-    </div>
     <!-- Green Footer Section -->
     <footer>
         <div class="footer-content">
@@ -472,20 +328,7 @@
 
 
 
-    <script>
-        function toggleIcons(button) {
-            const iconButtons = button.nextElementSibling;
-            if (iconButtons.classList.contains('show')) {
-                iconButtons.classList.remove('show'); // Remove show class to hide buttons
-                button.textContent = "Read More";
-                button.style.backgroundColor = "#28a745"; // Default color
-            } else {
-                iconButtons.classList.add('show'); // Add show class for animation
-                button.textContent = "Show Less";
-                button.style.backgroundColor = "#dc3545"; // Change to red for "Show Less"
-            }
-        }
-    </script>
+    <script src="js/softwarepage.js">    </script>
     <script src="js/nav.js"></script>
 </body>
 
