--- a/Camtasia.html
+++ b/Camtasia.html
@@ -37,10 +37,11 @@
                         <a href="photoshop.html">Photoshop</a>
                         <a href="brfont.html">Illustrator</a>
                         <a href="bsyfont.html">Camtasia Software</a>
-                        <a href="software.html">Microsoft Office</a>
+                        <a href="Microsoft-office.html">Microsoft Office</a>
                     </div>
                     <a href="themes.html">Desktop Themes</a>
                     <a href="antivirus.html">Antivirus</a>
+                    <a href="software.html">All Software</a>
                     <a href="Activators.html">All Activators</a>
                 </div>
             </li>
