--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
                 <a href="icon.html">Icon</a>
             </li>
             <li>
-                <a href="#Software">Software</a>
+                <a href="software">Software</a>
                 <div class="dropdown">
                     <a href="#subcontact4" onclick="toggleNestedMenu(event)">Application software</a>
                     <div class="nested-dropdown" id="nestedMenu4">
                         <a href="photoshop.html">Photoshop</a>
                         <a href="brfont.html">Illustrator</a>
                         <a href="bsyfont.html">Camtasia Software</a>
-                        <a href="software.html">Microsoft Office</a>
+                        <a href="Microsoft-office.html">Microsoft Office</a>
                     </div>
                     <a href="themes.html">Desktop Themes</a>
                     <a href="antivirus.html">Antivirus</a>
+                    <a href="software.html">All Software</a>
                     <a href="Activators.html">All Activators</a>
                 </div>
             </li>
