--- a/Esfont.html
+++ b/Esfont.html
@@ -31,8 +31,8 @@
                     <a href="#subcontact4" onclick="toggleNestedMenu(event)">Application software</a>
                     <div class="nested-dropdown" id="nestedMenu4">
                         <a href="photoshop.html">Photoshop</a>
-                        <a href="brfont.html">Illustrator</a>
-                        <a href="bsyfont.html">Camtasia Software</a>
+                        <a href="illustrator.html">Illustrator</a>
+                        <a href="Camtasia.html">Camtasia Software</a>
                         <a href="Microsoft-office.html">Microsoft Office</a>
                     </div>
                     <a href="themes.html">Desktop Themes</a>
